--- a/input.css
+++ b/input.css
@@ -15,7 +15,7 @@ button {
   filter: drop-shadow(0px 4px 0px #7b248a);
   cursor: pointer;
 }
-#text-box {
+#randomWordContainer {
   box-shadow: 0px 4px 0px 0px #030616;
 }
 
@@ -23,7 +23,9 @@ button {
   border: 2px solid #7429c6;
   text-align: center;
 }
-
+#input-field-container > .wrongAnswer {
+  border: 2px solid red;
+}
 #active-input::placeholder {
   position: absolute;
   top: 50%;
@@ -38,12 +40,22 @@ button {
 }
 @media only screen and (max-width: 360px) {
   #container {
-    width: 20rem;
+    width: 95%;
   }
-}
-@media only screen and (max-width: 320px) {
-  #container {
-    width: 17rem;
-    padding-inline: 10px;
+  #randomWordContainer {
+    width: 250px;
+    font-size: 16px;
+    font-weight: bold;
+  }
+  .text-for-xs {
+    font-size: 14px;
+    font-weight: bold;
+  }
+  #input-field-template input {
+    width: 1rem;
+    height: 1rem;
+  }
+  #buttonContainer button {
+    width: 6rem;
   }
 }
