--- a/main/output.css
+++ b/main/output.css
@@ -594,6 +594,10 @@ video {
   }
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .mt-\[\.1rem\] {
   margin-top: .1rem;
 }
@@ -614,12 +618,8 @@ video {
   height: .4rem;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
-.min-h-28 {
-  min-height: 7rem;
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .w-11 {
@@ -634,8 +634,12 @@ video {
   width: .4rem;
 }
 
-.w-\[20rem\] {
-  width: 20rem;
+.w-\[22rem\] {
+  width: 22rem;
+}
+
+.w-\[300px\] {
+  width: 300px;
 }
 
 .w-\[95\%\] {
@@ -646,12 +650,8 @@ video {
   width: 100%;
 }
 
-.w-\[25rem\] {
-  width: 25rem;
-}
-
-.w-\[23rem\] {
-  width: 23rem;
+.min-w-52 {
+  min-width: 13rem;
 }
 
 .flex-col {
@@ -698,8 +698,12 @@ video {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
-.rounded {
-  border-radius: 0.25rem;
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.break-words {
+  overflow-wrap: break-word;
 }
 
 .rounded-full {
@@ -708,6 +712,10 @@ video {
 
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded-xl {
@@ -723,9 +731,19 @@ video {
   border-color: rgb(99 101 104 / var(--tw-border-opacity, 1));
 }
 
+.bg-\[\#4A5567\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 85 103 / var(--tw-bg-opacity, 1));
+}
+
 .bg-brightOrchid {
   --tw-bg-opacity: 1;
   background-color: rgb(201 81 231 / var(--tw-bg-opacity, 1));
+}
+
+.bg-deepViolet {
+  --tw-bg-opacity: 1;
+  background-color: rgb(116 41 198 / var(--tw-bg-opacity, 1));
 }
 
 .bg-midnightBlack {
@@ -733,18 +751,8 @@ video {
   background-color: rgb(28 30 39 / var(--tw-bg-opacity, 1));
 }
 
-.bg-steelGray {
-  --tw-bg-opacity: 1;
-  background-color: rgb(74 85 103 / var(--tw-bg-opacity, 1));
-}
-
 .bg-transparent {
   background-color: transparent;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 
 .px-8 {
@@ -780,8 +788,13 @@ video {
   font-weight: 700;
 }
 
-.tracking-\[16px\] {
-  letter-spacing: 16px;
+.tracking-\[15px\] {
+  letter-spacing: 15px;
+}
+
+.text-\[\#F2F5F9\] {
+  --tw-text-opacity: 1;
+  color: rgb(242 245 249 / var(--tw-text-opacity, 1));
 }
 
 .text-softCloud {
@@ -819,13 +832,17 @@ button {
   cursor: pointer;
 }
 
-#text-box {
+#randomWordContainer {
   box-shadow: 0px 4px 0px 0px #030616;
 }
 
 #active-input {
   border: 2px solid #7429c6;
   text-align: center;
+}
+
+#input-field-container > .wrongAnswer {
+  border: 2px solid red;
 }
 
 #active-input::-moz-placeholder {
@@ -850,14 +867,27 @@ button {
 
 @media only screen and (max-width: 360px) {
   #container {
-    width: 20rem;
+    width: 95%;
   }
-}
 
-@media only screen and (max-width: 320px) {
-  #container {
-    width: 17rem;
-    padding-inline: 10px;
+  #randomWordContainer {
+    width: 250px;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  .text-for-xs {
+    font-size: 14px;
+    font-weight: bold;
+  }
+
+  #input-field-template input {
+    width: 1rem;
+    height: 1rem;
+  }
+
+  #buttonContainer button {
+    width: 6rem;
   }
 }
 
@@ -866,13 +896,7 @@ button {
     width: 95%;
   }
 
-  .md\:min-w-\[22rem\] {
-    min-width: 22rem;
-  }
-}
-
-@media (min-width: 1024px) {
-  .lg\:min-w-\[25rem\] {
-    min-width: 25rem;
+  .md\:min-w-\[23rem\] {
+    min-width: 23rem;
   }
 }
